# opentheory

./: CLAUDE.md  Makefile  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_checkpoint_content.py  0003_checkpoint_branch_id.py  0004_actor_roles.py  0005_funding_source.py  0006_accounts.py  0007_project_stewardship.py  0008_account_username.py  0009_account_email_index.py  0010_project_invitations.py  0011_project_agent_models.py  0012_toolbench_provenance.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/core/: auth.py  config.py  openrouter_models.py  roles.py  usernames.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  account.py  actor.py  append_only.py  artifact.py  branch.py  checkpoint.py  claim.py  contribution.py  enums.py  evidence.py  funding.py  links.py  project.py  project_invitation.py  project_member.py  thread.py  validation.py
backend/app/schemas/: account.py  actor.py  branch.py  checkpoint.py  claim.py  evidence.py  funding.py  health.py  instrument.py  invitation.py  project.py  thread.py  (+3 more)
backend/tests/: conftest.py  test_accounts.py  test_actors.py  test_app.py  test_auth.py  test_branches.py  test_checkpoints.py  test_funding.py  test_invitations.py  test_project_members.py  test_projects.py  test_read_models.py  test_research_flow.py  test_toolbench_provenance.py  test_usernames.py  test_validations.py  test_wiring.py
(+185 files in other folders)
