[project]
name = "opentheory-backend"
version = "0.1.0"
description = "FastAPI backend for OpenTheory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "certifi>=2024.0.0",
    "fastapi[standard]>=0.115.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.6.0",
    "pyjwt[crypto]>=2.9.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "sympy>=1.13",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
